--- a/Atensoli/Web.config
+++ b/Atensoli/Web.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="CallCenterConnectionString" connectionString="Data Source=(local);Initial Catalog=Cellper;Integrated Security=True"
+    <add name="CallCenterConnectionString" connectionString="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
@@ -15,7 +15,7 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <appSettings>
-    <add key="connectionString" value="Data Source=(local);Initial Catalog=Cellper;Integrated Security=True" />
+    <add key="connectionString" value="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;Integrated Security=True" />
 
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
