Cambios al namespace

--- a/Atensoli/Atensoli.csproj
+++ b/Atensoli/Atensoli.csproj
@@ -212,6 +212,7 @@
     <Content Include="images\Invisible.png" />
     <Content Include="images\ira25.gif" />
     <Content Include="images\loading.gif" />
+    <Content Include="images\Logo-Fontur.png" />
     <Content Include="images\logo_javi.jpg" />
     <Content Include="images\mdt.jpg" />
     <Content Include="images\minus.png" />
