--- a/Atensoli/Atensoli.csproj
+++ b/Atensoli/Atensoli.csproj
@@ -248,6 +248,7 @@
     <Content Include="Styles\simpleAutoComplete.css" />
     <Content Include="Styles\Site.css" />
     <Content Include="Vista\Autocomplete.aspx" />
+    <Content Include="Vista\BuscarSolicitante.aspx" />
     <Content Include="Vista\Empresa.aspx" />
     <Content Include="Vista\EnConstruccion.aspx" />
     <Content Include="Vista\Logout.aspx" />
@@ -259,6 +260,7 @@
     <Content Include="Vista\SeguridadObjeto.aspx" />
     <Content Include="Vista\SeguridadObjetoGrupo.aspx" />
     <Content Include="Vista\SeguridadUsuario.aspx" />
+    <Content Include="Vista\Solicitante.aspx" />
     <Content Include="Vista\UCMessageBox.ascx" />
     <Content Include="Vista\UCNavegacion.ascx" />
     <Content Include="Vista\UCNavigation.ascx" />
@@ -306,6 +308,7 @@
     <Compile Include="Modelo\CEmpresa.cs" />
     <Compile Include="Modelo\CRecepcion.cs" />
     <Compile Include="Modelo\CSeguridad.cs" />
+    <Compile Include="Modelo\CSolicitante.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vista\Autocomplete.aspx.cs">
       <DependentUpon>Autocomplete.aspx</DependentUpon>
@@ -313,6 +316,13 @@
     </Compile>
     <Compile Include="Vista\Autocomplete.aspx.designer.cs">
       <DependentUpon>Autocomplete.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\BuscarSolicitante.aspx.cs">
+      <DependentUpon>BuscarSolicitante.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\BuscarSolicitante.aspx.designer.cs">
+      <DependentUpon>BuscarSolicitante.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\Empresa.aspx.cs">
       <DependentUpon>Empresa.aspx</DependentUpon>
@@ -390,6 +400,13 @@
     </Compile>
     <Compile Include="Vista\SeguridadUsuario.aspx.designer.cs">
       <DependentUpon>SeguridadUsuario.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\Solicitante.aspx.cs">
+      <DependentUpon>Solicitante.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\Solicitante.aspx.designer.cs">
+      <DependentUpon>Solicitante.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\UCMessageBox.ascx.cs">
       <DependentUpon>UCMessageBox.ascx</DependentUpon>
