Diseño de la pantalla SeleccionarSolicitante

--- a/Atensoli/Atensoli.csproj
+++ b/Atensoli/Atensoli.csproj
@@ -248,7 +248,7 @@
     <Content Include="Styles\simpleAutoComplete.css" />
     <Content Include="Styles\Site.css" />
     <Content Include="Vista\Autocomplete.aspx" />
-    <Content Include="Vista\BuscarTipoSolicitud.aspx" />
+    <Content Include="Vista\SeleccionarTipoSolicitud.aspx" />
     <Content Include="Vista\SeleccionarSolicitante.aspx" />
     <Content Include="Vista\Empresa.aspx" />
     <Content Include="Vista\EnConstruccion.aspx" />
@@ -318,12 +318,12 @@
     <Compile Include="Vista\Autocomplete.aspx.designer.cs">
       <DependentUpon>Autocomplete.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Vista\BuscarTipoSolicitud.aspx.cs">
-      <DependentUpon>BuscarTipoSolicitud.aspx</DependentUpon>
+    <Compile Include="Vista\SeleccionarTipoSolicitud.aspx.cs">
+      <DependentUpon>SeleccionarTipoSolicitud.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Vista\BuscarTipoSolicitud.aspx.designer.cs">
-      <DependentUpon>BuscarTipoSolicitud.aspx</DependentUpon>
+    <Compile Include="Vista\SeleccionarTipoSolicitud.aspx.designer.cs">
+      <DependentUpon>SeleccionarTipoSolicitud.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\SeleccionarSolicitante.aspx.cs">
       <DependentUpon>SeleccionarSolicitante.aspx</DependentUpon>
