--- a/Atensoli/Atensoli.csproj
+++ b/Atensoli/Atensoli.csproj
@@ -241,6 +241,7 @@
     <Content Include="loginassets\js\html5shiv.js" />
     <Content Include="loginassets\js\PIE.htc" />
     <Content Include="loginassets\js\respond.min.js" />
+    <Content Include="Vista\SeleccionarTipoSolicitante.aspx" />
     <Content Include="Styles\estilo.css" />
     <Content Include="Styles\estiloindex.css" />
     <Content Include="Styles\estilos.css" />
@@ -314,6 +315,13 @@
     <Compile Include="Modelo\CSeguridad.cs" />
     <Compile Include="Modelo\CSolicitante.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vista\SeleccionarTipoSolicitante.aspx.cs">
+      <DependentUpon>SeleccionarTipoSolicitante.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\SeleccionarTipoSolicitante.aspx.designer.cs">
+      <DependentUpon>SeleccionarTipoSolicitante.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Autocomplete.aspx.cs">
       <DependentUpon>Autocomplete.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
