--- a/Atensoli/Atensoli.csproj
+++ b/Atensoli/Atensoli.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Vista\Solicitud.aspx" />
+    <Content Include="Vista\SeleccionarOrganizacion.aspx" />
     <Content Include="Vista\Organizacion.aspx" />
     <Content Include="packages.config" />
     <Content Include="assets\fonts\fontawesome-webfont.eot" />
@@ -316,6 +318,20 @@
     <Compile Include="Modelo\CRecepcion.cs" />
     <Compile Include="Modelo\CSeguridad.cs" />
     <Compile Include="Modelo\CSolicitante.cs" />
+    <Compile Include="Vista\Solicitud.aspx.cs">
+      <DependentUpon>Solicitud.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\Solicitud.aspx.designer.cs">
+      <DependentUpon>Solicitud.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\SeleccionarOrganizacion.aspx.cs">
+      <DependentUpon>SeleccionarOrganizacion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\SeleccionarOrganizacion.aspx.designer.cs">
+      <DependentUpon>SeleccionarOrganizacion.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Organizacion.aspx.cs">
       <DependentUpon>Organizacion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
