--- a/Atensoli/Web.config
+++ b/Atensoli/Web.config
@@ -7,7 +7,8 @@
 
 <configuration>
   <connectionStrings>
-    <add name="CallCenterConnectionString" connectionString="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;User ID=sa; password =123456789"
+    <!--<add name="CallCenterConnectionString" connectionString="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;User ID=sa; password =123456789"-->
+         <add name="CallCenterConnectionString" connectionString="Data Source=(local);Initial Catalog=Atensoli;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
@@ -15,9 +16,9 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <appSettings>
-    <add key="connectionString" value="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;User ID=sa; password =123456789" />
-
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <!--<add key="connectionString" value="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;User ID=sa; password =123456789" />-->
+     <add key="connectionString" value="Data Source=(local);Initial Catalog=Atensoli;Integrated Security=True" />
+   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 </configuration>
 
