--- a/Atensoli/Atensoli.csproj
+++ b/Atensoli/Atensoli.csproj
@@ -306,6 +306,7 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Controlador\Seguimiento.cs" />
+    <Compile Include="Controlador\ModuloGeneral.cs" />
     <Compile Include="Vista\SeguimientoHistorial.aspx.cs">
       <DependentUpon>SeguimientoHistorial.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
