Filtro de recepcion correspondencia por gerencia presidencia

--- a/Atensoli/Web.config
+++ b/Atensoli/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -7,7 +7,9 @@
 
 <configuration>
   <connectionStrings>
-    <add name="CallCenterConnectionString" connectionString="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;User ID=sa; password =123456789"
+    <add name="CallCenterConnectionString" connectionString="Data Source=server8;Database=Atensoli;User ID=sa; password =vv2832f1"
+      providerName="System.Data.SqlClient" />
+    <add name="AtensoliConnectionString" connectionString="Data Source=server8;Initial Catalog=Atensoli;User ID=sa;Password=vv2832f1"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
@@ -15,9 +17,8 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <appSettings>
-    <add key="connectionString" value="Data Source=GTI-DDM-4;Initial Catalog=Atensoli;User ID=sa; password =123456789" />
+    <add key="connectionString" value="Data Source=server8;Database=Atensoli;User ID=sa; password =vv2832f1" />
 
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 </configuration>
-
