--- a/Atensoli/Web.config
+++ b/Atensoli/Web.config
@@ -7,17 +7,22 @@
 
 <configuration>
   <connectionStrings>
-    <add name="CallCenterConnectionString" connectionString="Data Source=server8;Database=Atensoli;User ID=sa; password =vv2832f1"
-      providerName="System.Data.SqlClient" />
+    <!--PRODUCCION-->
+    <!--<add name="CallCenterConnectionString" connectionString="Data Source=SERVER8;Database=Atensoli;User ID=sa; password =vv2832f1" providerName="System.Data.SqlClient" />-->
+    <!--DESARROLLO CASA-->
+    <add name="CallCenterConnectionString" connectionString="Data Source=DESKTOP-6SALJFB\SQLEXPRESS;Database=Atensoli;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <appSettings>
-    <add key="connectionString" value="Data Source=server8;Database=Atensoli;User ID=sa; password =vv2832f1" />
-
+    <!--PRODUCCION-->
+    <!--<add key="connectionString" value="Data Source=SERVER8;Database=Atensoli;User ID=sa; password =vv2832f1" />-->
+    <!--DESARROLLO CASA-->
+    <add key="connectionString" value="Data Source=DESKTOP-6SALJFB\SQLEXPRESS;Database=Atensoli;Integrated Security=True" />
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 </configuration>
+
 
